attached_assets/Pasted-client-536-WebSocket-connection-to-wss-a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k-kirk-1748766006463.txt
client:536 WebSocket connection to 'wss://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/?token=iEb4E139qMqC' failed: 
setupWebSocket @ client:536Understand this error
client:536 Uncaught (in promise) SyntaxError: Failed to construct 'WebSocket': The URL 'wss://localhost:undefined/?token=iEb4E139qMqC' is invalid.
    at setupWebSocket (client:536:19)
    at fallback (client:509:16)
    at WebSocket.<anonymous> (client:555:7)Understand this error
chunk-RPCDYKBN.js?v=8bc9a725:21551 Download the React DevTools for a better development experience: https://reactjs.org/link/react-devtools
chat-room-simple-new.tsx:196 Chat access debug: Object
chat-room-simple-new.tsx:196 Chat access debug: Object
chat-room-simple-new.tsx:196 Chat access debug: Object
chat-room-simple-new.tsx:209 Force setting chat character to: Kira Spencer
chunk-RPCDYKBN.js?v=8bc9a725:521 Warning: React has detected a change in the order of Hooks called by ChatRoom. This will lead to bugs and errors if not fixed. For more information, read the Rules of Hooks: https://reactjs.org/link/rules-of-hooks

   Previous render            Next render
   ------------------------------------------------------
1. useContext                 useContext
2. useContext                 useContext
3. useSyncExternalStore       useSyncExternalStore
4. useRef                     useRef
5. useInsertionEffect         useInsertionEffect
6. useContext                 useContext
7. useContext                 useContext
8. useSyncExternalStore       useSyncExternalStore
9. useRef                     useRef
10. useInsertionEffect        useInsertionEffect
11. useContext                useContext
12. useContext                useContext
13. useContext                useContext
14. useEffect                 useEffect
15. useState                  useState
16. useCallback               useCallback
17. useSyncExternalStore      useSyncExternalStore
18. useEffect                 useEffect
19. useContext                useContext
20. useState                  useState
21. useEffect                 useEffect
22. useCallback               useCallback
23. useSyncExternalStore      useSyncExternalStore
24. useCallback               useCallback
25. useContext                useContext
26. useState                  useState
27. useEffect                 useEffect
28. useCallback               useCallback
29. useSyncExternalStore      useSyncExternalStore
30. useCallback               useCallback
31. useContext                useContext
32. useState                  useState
33. useEffect                 useEffect
34. useCallback               useCallback
35. useSyncExternalStore      useSyncExternalStore
36. useCallback               useCallback
37. useState                  useState
38. useEffect                 useEffect
39. useContext                useContext
40. useState                  useState
41. useState                  useState
42. useState                  useState
43. useState                  useState
44. useRef                    useRef
45. useState                  useState
46. useState                  useState
47. useState                  useState
48. useState                  useState
49. useState                  useState
50. useState                  useState
51. useState                  useState
52. useState                  useState
53. useContext                useContext
54. useContext                useContext
55. useContext                useContext
56. useEffect                 useEffect
57. useState                  useState
58. useCallback               useCallback
59. useSyncExternalStore      useSyncExternalStore
60. useEffect                 useEffect
61. useContext                useContext
62. useContext                useContext
63. useContext                useContext
64. useEffect                 useEffect
65. useState                  useState
66. useCallback               useCallback
67. useSyncExternalStore      useSyncExternalStore
68. useEffect                 useEffect
69. useContext                useContext
70. useContext                useContext
71. useContext                useContext
72. useEffect                 useEffect
73. useState                  useState
74. useCallback               useCallback
75. useSyncExternalStore      useSyncExternalStore
76. useEffect                 useEffect
77. useContext                useContext
78. useContext                useContext
79. useContext                useContext
80. useEffect                 useEffect
81. useState                  useState
82. useCallback               useCallback
83. useSyncExternalStore      useSyncExternalStore
84. useEffect                 useEffect
85. useEffect                 useEffect
86. useEffect                 useEffect
87. undefined                 useEffect
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

    at ChatRoom (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/src/pages/chat-room-simple-new.tsx?t=1748765940470:65:22)
    at Route (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=8bc9a725:323:16)
    at Switch (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/wouter.js?v=8bc9a725:379:17)
    at Router (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/src/App.tsx?t=1748765940470&v=neMURrW1ypxnMvIkENSac:54:31)
    at Provider (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/chunk-W6PG6DRF.js?v=8bc9a725:38:15)
    at TooltipProvider (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@radix-ui_react-tooltip.js?v=8bc9a725:58:5)
    at ThemeProvider (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/src/components/theme-provider.tsx:25:3)
    at QueryClientProvider (https://a97dd40b-1cde-4de4-a47d-73d5912bd5d8-00-12mbkouhj5b1k.kirk.replit.dev/@fs/home/runner/workspace/node_modules/.vite/deps/@tanstack_react-query.js?v=8bc9a725:2805:3)
    at App
printWarning @ chunk-RPCDYKBN.js?v=8bc9a725:521Understand this error
chat-room-simple-new.tsx:196 Chat access debug: Object
chat-room-simple-new.tsx:209 Force setting chat character to: Kira Spencer
chunk-RPCDYKBN.js?v=8bc9a725:11678 Uncaught Error: Rendered more hooks than during the previous render.
    at updateWorkInProgressHook (chunk-RPCDYKBN.js?v=8bc9a725:11678:21)
    at updateEffectImpl (chunk-RPCDYKBN.js?v=8bc9a725:12074:22)
    at updateEffect (chunk-RPCDYKBN.js?v=8bc9a725:12099:18)
    at Object.useEffect (chunk-RPCDYKBN.js?v=8bc9a725:12703:22)
    at useEffect (chunk-QCHXOAYK.js?v=8bc9a725:1078:29)
    at ChatRoom (chat-room-simple-new.tsx:233:3)
    at renderWithHooks (chunk-RPCDYKBN.js?v=8bc9a725:11548:26)
    at updateFunctionComponent (chunk-RPCDYKBN.js?v=8bc9a725:14582:28)
    at beginWork (chunk-RPCDYKBN.js?v=8bc9a725:15924:22)
    at HTMLUnknownElement.callCallback2 (chunk-RPCDYKBN.js?v=8bc9a725:3674:22)Understand this error
